<resources>
    <string name="app_name">AndroidTicTacToe-Tutorial2</string>
    <string name="play_grid_button_1">1</string>
    <string name="play_grid_button_2">2</string>
    <string name="play_grid_button_3">3</string>
    <string name="play_grid_button_4">4</string>
    <string name="play_grid_button_5">5</string>
    <string name="play_grid_button_6">6</string>
    <string name="play_grid_button_7">7</string>
    <string name="play_grid_button_8">8</string>
    <string name="play_grid_button_9">9</string>
    <string name="info">info</string>
    <string name="nuevo_juego">Nuevo juego</string>
    <string name="turno_humano">Es tu turno</string>
    <string name="turno_bugdroid">Es el turno de Bugdroid</string>
    <string name="primer_turno_humano">Juegas primero</string>
    <string name="estado_empate">Esto es un empate!</string>
    <string name="estado_humano_gana">Eres el p**o amo!</string>
    <string name="estado_bugdroid_gana">Intenta de nuevo, perdedor!</string>
    <string name="puntaje_inicial">0</string>
    <string name="nombre_humano">Jugador</string>
    <string name="nombre_computador">Bugdroid</string>
    <string name="empate">Empates</string>

</resources>
